# some-comments-haskell

./: README.md  some-comments.cabal
app/: Main.hs  helloworld.hs  test1.hs  test2.hs  test3.hs  testevent.hs
