name:                some-comments
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/fiddur/some-comments-haskell
license:             AGPL-3
license-file:        COPYING
author:              Fredrik Liljegren
maintainer:          fredrik@liljegren.org
copyright:           2017 Fredrik Liljegren
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable some-comments-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , some-comments
                     , eventstore
                     , classy-prelude
                     , aeson
                     , async
                     , yesod
                     , bytestring
  default-language:    Haskell2010

test-suite some-comments-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , some-comments
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/some-comments
